# freee-autofill-tool

./: .gitignore  README.md  docker-compose.yml  init.sql  package-lock.json
backend/: .env_example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  login.py  projects.py
backend/app/config/: clock.py  context.py  logging.py  logging_config.py  settings.py
backend/app/converter/: __init__.py  converter.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entity.py  project.py  project_entity.py
backend/app/schemas/: __init__.py  login.py  pagination.py  project.py  project_excel_format.py
backend/app/services/: project_service.py
docker/: init.sql
frontend/: eslint.config.js  index.html  openapi.json  package-lock.json  package.json  prettier.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: api.ts
frontend/src/api/.openapi-generator/: FILES
frontend/src/api/docs/: AuthApi.md  LoginRequest.md  LoginResponse.md  PaginatedResponseProjectRead.md  Pagination.md  ProjectAPIApi.md  ProjectApi.md  ProjectCreate.md  ProjectDetailRead.md  ProjectExcelFormatRead.md  ProjectRead.md  ProjectUpdate.md
frontend/src/components/: Header.tsx  Pagination.tsx  UnAuthHeader.tsx
frontend/src/constants/: storageKeys.ts
frontend/src/hooks/: useLogin.ts  useProjects.ts
frontend/src/pages/: LoginPage.tsx  ProjectsPage.tsx
frontend/src/utils/: auth.ts
local_docker/: init.sql
logs/: app.log.2025-08-02  app.log.2025-08-05  app.log.2025-08-10
